# streamlit-metatrader5-metrics

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  streamlit_run_with_oanda_mt5.bat  streamlit_run_with_oanda_mt5.ps1  util.py
.github/: dependabot.yml
.github/workflows/: test.yml
.streamlit/: config.toml
app/: main.py  util.py
